--- a/SecondExercise/PietroPrandini_FundamentalsOfElectronics_SecondSPICEExercise.tex
+++ b/SecondExercise/PietroPrandini_FundamentalsOfElectronics_SecondSPICEExercise.tex
@@ -32,6 +32,17 @@ University of Padua (Italy)}}}
 
 \tableofcontents
 
+\chapter{Analytic solution}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=12cm]{schematics/nmos.jpg}
+  \caption{NMOS circuit}
+  \label{nmos}
+\end{figure}
+
 \input{tex/a.tex}
+
+\chapter{SPICE simulations}
 
 \end{document}
